# aimlapi-rs

./: Cargo.toml  LICENSE  README.md
src/: chat.rs  lib.rs  model.rs
src/managers/: mod.rs
