[package]
name = "aimlapi"
version = "0.0.1"
edition = "2021"
description = "An unofficial Rust library for the AI/ML API"
repository = "https://github.com/trajection/aimlapi-rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
